# CppUnitDemo

./: CMakeLists.txt  readme
include/: Math.hpp
src/: Math.cpp  main.cpp
test/: CMakeLists.txt  MathTest.cpp  MathTest.hpp  main.cpp
